# cpp-skeleton

./: CMakeLists.txt  README.md  cmake.md  configure  libraries_prerequesites
cmake/modules/: FindGTest.cmake  FindPQXX.cmake  FindPostgreSQL.cmake
conf/: app.properties  log.conf
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  main.cpp  main.h  trajectory_reconstruccion.cpp
src/calibration/: calibration.cpp  calibration.h
src/controller/database/: ConnectionPool.h  DatabaseManager.cpp  DatabaseManager.h  DummyConnection.h  MySQLConnection.h  PostgresqlConnection.h
src/utils/: Common.h  Common.h.in  Poison.h  Utils.h
src/utils/exception/: BasicException.h
src/utils/properties/: Properties.cpp  Properties.h
src/utils/thread/: ConcurrentQueue.cpp  ConcurrentQueue.h  CriticalSection.cpp  CriticalSection.h  Semaphore.cpp  Semaphore.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
test/: CMakeLists.txt  PostgresqlTest.cpp  SimpleTest.cpp
